syntax = "proto3";

service ServicioGolang {
  rpc IniciarJuego (PlayerGameRequest) returns (PlayerGameReply) {}
}

message PlayerGameRequest {
  string players = 1;
  string game = 2;
}

message PlayerGameReply {
  string mensajeganador = 1;
}

